fix: lexical editor toolbar z-index

--- a/packages/lexical-editor/src/components/Toolbar/Toolbar.css
+++ b/packages/lexical-editor/src/components/Toolbar/Toolbar.css
@@ -5,7 +5,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 5;
   opacity: 0;
   background-color: #fff;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
